--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kucing Anjing &amp; Ikan Pedia"
+        android:text="Kucing Anjing &amp; Elang Pedia"
         android:textStyle="bold"
         android:textColor="@color/design_default_color_primary_dark"
         android:textSize="25sp"
@@ -46,13 +46,13 @@
             android:scaleType="fitCenter"
             />
         <ImageButton
-            android:id="@+id/btn_buka_ras_ikan"
+            android:id="@+id/btn_buka_ras_elang"
             android:padding="8dp"
             android:layout_margin="4dp"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="150dp"
-            android:src="@drawable/ikan_bawal"
+            android:src="@drawable/elangular"
             android:scaleType="fitCenter"
             />
     </LinearLayout>
